--- a/public/stylecontainer/style.css
+++ b/public/stylecontainer/style.css
@@ -9,6 +9,10 @@ body{
     font-weight: 400;
     color: #000;
 }
+.dataTables_filter {
+    display: none;
+ }
+ 
 img{
     width:100%;
     height: auto;
@@ -96,20 +100,33 @@ img{
     transition: 0.3s ease-in-out;
 }
 .sidebar .setting-section {
-    display: flex;
+    /*display: flex;
     justify-content: space-between;
     position: absolute;
     bottom:0;    
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     width:100%;
     padding: 0px 0px 0px 28px;
+    align-items: center;*/
+
+    /*for sticky*/
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    max-width: 282px;
     align-items: center;
+    width: 100%;
+    background: #fff;
+    z-index: 111;
 }
 .sidebar .setting-section .setting {
     display: inline-block;
     margin-right: 47px;
     max-width: 15px;
     height: 18px;
+    margin-left: 20px;
 }
 .sidebar .setting-section .setting-text {
     display: inline-block;
@@ -139,12 +156,40 @@ img{
     font-size: 40px;
     font-weight: 400;
 }
-.dashbord-container .right-content  .stratent-img {
+.dashbord-container .right-content  .stratent-img{
     position: absolute;
     right: 4%;
     max-width: 18%;
     bottom: 24px;
 }
+/*table start*/
+table.GeneratedTable {
+  width: 96%;
+  background-color: #ffffff;
+  border-collapse: collapse;
+  margin:20px auto;
+}
+
+table.GeneratedTable td, table.GeneratedTable th {
+  border-bottom: 1px solid #ECECEC;
+  padding: 5px ;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: roboto;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.87);
+}
+table.GeneratedTable td{
+    padding: 10px 5px;
+}
+table.GeneratedTable th{
+    padding: 6px 10px;
+}
+table.GeneratedTable thead {
+background: #f5f5f5;
+}
+/*table end*/
+
 
 @media(max-width:768px){
     .dashbord-header {
@@ -193,6 +238,9 @@ img{
     .dashbord-container {
         overflow: hidden;
         width: 100%;
+    }
+    .sidebar .setting-section{
+        max-width: 243px;
     }
     .sidebar .setting-section .setting-text {
         font-size: 16px;
