--- a/public/stylecontainer/style.css
+++ b/public/stylecontainer/style.css
@@ -148,6 +148,7 @@ img{
 }
 .dashbord-container .right-content {
     /* flex: 1 0 auto; */
+    width: 100%;
     position: relative;
     min-height: 951px;
 }
