--- a/public/stylecontainer/style.css
+++ b/public/stylecontainer/style.css
@@ -13,7 +13,7 @@ body{
     display: none;
  }
  .form-control{
-     width: 35% !important;
+     width: 35% ;
  }
  
 img{
@@ -148,9 +148,14 @@ img{
     font-size: 18px;
 }
 .sidebar .setting-section .log-out {
+    /* background: #E6E6E6; */
+    padding: 7px 9px;
+    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+}
+.sidebar .setting-section .log-out:hover {
     background: #E6E6E6;
     padding: 7px 9px;
-    border-left: 1px solid rgba(0, 0, 0, 0.2);;
 }
 .sidebar .setting-section  .logout-img{
     max-width: 47px;
@@ -284,5 +289,7 @@ background: #f5f5f5;
     }
 
 }
+
+
 
 
