handling data update done

--- a/public/stylecontainer/datatable.css
+++ b/public/stylecontainer/datatable.css
@@ -42,5 +42,9 @@ table.dataTable.no-footer {
     }
 
     #field, label{
-        float: none;
+        float: none !important;
     }
+
+.sub-menu{
+    margin-left: 15px;
+}
