--- a/public/stylecontainer/style.css
+++ b/public/stylecontainer/style.css
@@ -36,7 +36,7 @@ img{
 .dashbord-header .toggle-left-section {
     display: flex;
     gap: 78px;
-    padding-left: 2%;
+    padding-left: 5%;
 }
 .dashbord-header .admin-title {
     font-size: 25px;
@@ -197,6 +197,7 @@ table.GeneratedTable {
 }
 .corporateinfofullwidth{
     flex: 1 0 auto ;
+    margin-right: 20px;
 }
  .corporateinfoTable {
     width: 96% !important;
