--- a/public/stylecontainer/loginstyle.css
+++ b/public/stylecontainer/loginstyle.css
@@ -3,11 +3,15 @@
     border:none;
     outline: none;
 }
+form .error {
+    color: #ff0000;
+    }
 .invalid-feedback{
     display: flex;
     justify-content: center;
     color: red;
 }
+
 body{
     font-family: Roboto;
     font-weight: 400;
